--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "latest",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0"
   }
 }
