--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "SFEZServer",
   "version": "1.0.0",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
     "ejs": "^2.4.2",
     "express": "latest",
+    "express-jwt": "^3.4.0",
     "express-params": "0.0.3",
     "express-session": "^1.14.0",
     "gulp": "latest",
+    "jsonwebtoken": "^7.1.6",
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0"
   }
 }
