--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
     "debug": "^2.2.0",
@@ -21,6 +22,7 @@
     "passport-facebook": "^2.1.1",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
+    "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
     "request": "^2.74.0"
   }
