--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "gulp": "latest",
     "http": "0.0.0",
     "jsonwebtoken": "^7.1.6",
+    "knex": "^0.11.10",
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
+    "pg": "^6.1.0",
     "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
     "request": "^2.74.0"
