--- a/package.json
+++ b/package.json
@@ -13,10 +13,22 @@
     "express-params": "0.0.3",
     "express-session": "^1.14.0",
     "form-data": "^1.0.0-rc4",
-    "gulp": "latest",
     "http": "0.0.0",
     "jsonwebtoken": "^7.1.6",
     "knex": "^0.11.10",
+    "koa": "^1.2.1",
+    "koa-better-body": "^2.0.1",
+    "koa-error": "^2.1.0",
+    "koa-flash": "^1.0.0",
+    "koa-helmet": "^1.0.0",
+    "koa-jwt": "^1.2.0",
+    "koa-mount": "^1.3.0",
+    "koa-passport": "^1.3.1",
+    "koa-resteasy": "^1.0.0-alpha.3",
+    "koa-router": "^5.4.0",
+    "koa-session": "^3.3.1",
+    "koa-views": "^4.1.0",
+    "lodash": "^4.15.0",
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
