--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "SFEZServer",
   "version": "1.0.0",
+  "scripts": {
+    "migrate": "knex --knexfile db/config.js",
+    "migrate:make": "knex --knexfile db/config.js migrate:make",
+    "migrate:latest": "knex --knexfile db/config.js migrate:latest",
+    "migrate:rollback": "knex --knexfile db/config.js migrate:rollback"
+  },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.1",
@@ -24,7 +30,7 @@
     "koa-jwt": "^1.2.0",
     "koa-mount": "^1.3.0",
     "koa-passport": "^1.3.1",
-    "koa-resteasy": "^1.0.0-alpha.3",
+    "koa-resteasy": "^1.0.0-alpha.8",
     "koa-router": "^5.4.0",
     "koa-session": "^3.3.1",
     "koa-views": "^4.1.0",
