--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-mount": "^1.3.0",
     "koa-passport": "^1.3.1",
     "koa-resteasy": "^1.0.0-alpha.10",
+    "koa-route": "^2.4.2",
     "koa-router": "^5.4.0",
     "koa-session": "^3.3.1",
     "koa-views": "^4.1.0",
@@ -31,6 +32,7 @@
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
+    "passport-anonymous": "^1.0.1",
     "passport-facebook": "^2.1.1",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
