--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "koa-jwt": "^1.2.0",
     "koa-mount": "^1.3.0",
     "koa-passport": "^1.3.1",
-    "koa-resteasy": "^1.0.0-alpha.10",
+    "koa-resteasy": "^1.0.0-alpha.11",
     "koa-route": "^2.4.2",
     "koa-router": "^5.4.0",
     "koa-session": "^3.3.1",
@@ -39,7 +39,8 @@
     "pg": "^6.1.0",
     "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "watch": "^0.19.2"
   },
   "description": "The SFEZ server is a MEAN-based implementation that serves the relationship services for StreetFood EZ. Basic services include reviews, favorites, checkins, loyalty, social media.",
   "main": "server.js",
