--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "koa-resteasy": "^1.0.0-alpha.11",
     "koa-route": "^2.4.2",
     "koa-router": "^5.4.0",
+    "koa-send": "^3.2.0",
     "koa-session": "^3.3.1",
+    "koa-static-folder": "^0.1.6",
     "koa-views": "^4.1.0",
-    "koa-static-folder": "0.1.6",
-    "koa-send": "3.2.0",
     "lodash": "^4.15.0",
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
