--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.1",
+    "chai-http": "^3.0.0",
     "debug": "^2.2.0",
     "ejs": "^2.4.2",
     "jsonwebtoken": "^7.1.6",
@@ -30,7 +31,7 @@
     "koa-session": "^3.3.1",
     "koa-static-folder": "^0.1.6",
     "koa-views": "^4.1.0",
-    "lodash": "^4.15.0",
+    "lodash": "^4.16.1",
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
@@ -41,7 +42,7 @@
     "pg": "^6.1.0",
     "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
-    "request": "^2.74.0",
+    "request": "^2.75.0",
     "watch": "^0.19.2"
   },
   "description": "The SFEZ server is a MEAN-based implementation that serves the relationship services for StreetFood EZ. Basic services include reviews, favorites, checkins, loyalty, social media.",
