--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa-static-folder": "^0.1.6",
     "koa-views": "^4.1.0",
     "lodash": "^4.16.1",
+    "lodash.once": "^4.1.1",
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
