--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai-http": "^3.0.0",
     "debug": "^2.2.0",
     "ejs": "^2.4.2",
+    "gmaps": "0.4.24",
     "jsonwebtoken": "^7.1.6",
     "knex": "^0.11.10",
     "koa": "^1.2.1",
