--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
     "request": "^2.75.0",
-    "watch": "^0.19.2"
+    "watch": "^0.19.2",
+    "node-gcm": "^0.14.0",
+    "node-uuid": "1.4.3"
   },
   "description": "The SFEZ server is a MEAN-based implementation that serves the relationship services for StreetFood EZ. Basic services include reviews, favorites, checkins, loyalty, social media.",
   "main": "server.js",
