--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "lodash.once": "^4.1.1",
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
+    "node-gcm": "^0.14.0",
+    "node-uuid": "1.4.3",
     "passport": "^0.3.2",
     "passport-anonymous": "^1.0.1",
     "passport-facebook": "^2.1.1",
@@ -45,9 +47,8 @@
     "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
     "request": "^2.75.0",
-    "watch": "^0.19.2",
-    "node-gcm": "^0.14.0",
-    "node-uuid": "1.4.3"
+    "uuid": "^2.0.3",
+    "watch": "^0.19.2"
   },
   "description": "The SFEZ server is a MEAN-based implementation that serves the relationship services for StreetFood EZ. Basic services include reviews, favorites, checkins, loyalty, social media.",
   "main": "server.js",
