--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai-http": "^3.0.0",
     "debug": "^2.2.0",
     "ejs": "^2.4.2",
+    "firebase": "^3.4.1",
     "gmaps": "0.4.24",
     "jsonwebtoken": "^7.1.6",
     "knex": "^0.11.10",
@@ -36,8 +37,9 @@
     "lodash.once": "^4.1.1",
     "moltin": "^1.0.0",
     "mongoose": "^4.5.3",
-    "node-gcm": "^0.14.0",
+    "node-gcm": "^0.14.4",
     "node-uuid": "1.4.3",
+    "nodemailer": "^2.6.4",
     "passport": "^0.3.2",
     "passport-anonymous": "^1.0.1",
     "passport-facebook": "^2.1.1",
