--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^3.4.1",
     "gmaps": "0.4.24",
     "jsonwebtoken": "^7.1.6",
+    "kcors": "^1.3.0",
     "knex": "^0.11.10",
     "koa": "^1.2.1",
     "koa-better-body": "^2.0.1",
@@ -46,6 +47,7 @@
     "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
     "request": "^2.75.0",
+    "requestretry": "^1.12.0",
     "uuid": "^2.0.3",
     "watch": "^0.19.2"
   },
