--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
     "pg": "^6.1.0",
+    "pg-native": "^1.10.0",
     "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
     "request": "^2.75.0",
