--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.4.2",
     "fcm-node": "^1.0.15",
     "firebase": "^3.4.1",
+    "firebase-admin": "^4.0.6",
     "gmaps": "0.4.24",
     "jsonwebtoken": "^7.1.6",
     "kcors": "^1.3.0",
@@ -23,6 +24,7 @@
     "koa-error": "^2.1.0",
     "koa-flash": "^1.0.0",
     "koa-helmet": "^1.0.0",
+    "koa-json-error": "^3.1.0",
     "koa-jwt": "^1.2.0",
     "koa-mount": "^1.3.0",
     "koa-passport": "^1.3.1",
