--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "co": "^4.6.0",
     "debug": "^2.2.0",
     "ejs": "^2.4.2",
     "fcm-node": "^1.0.15",
     "firebase": "^3.4.1",
     "firebase-admin": "^4.0.6",
+    "form-data": "^2.1.2",
     "gmaps": "0.4.24",
     "jsonwebtoken": "^7.1.6",
     "kcors": "^1.3.0",
@@ -28,7 +30,6 @@
     "koa-jwt": "^1.2.0",
     "koa-mount": "^1.3.0",
     "koa-passport": "^1.3.1",
-    "koa-resteasy": "^1.0.0-alpha.11",
     "koa-route": "^2.4.2",
     "koa-router": "^5.4.0",
     "koa-send": "^3.2.0",
