added file rotation package

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "requestretry": "^1.12.0",
     "uuid": "^2.0.3",
     "watch": "^0.19.2",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6"
   },
   "description": "The SFEZ server is a Node-based implementation that provides the relationship services for StreetFood EZ. Basic services include reviews, favorites, checkins, loyalty, social media.",
   "main": "server.js",
