--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "migrate:make": "knex --knexfile db/config.js migrate:make",
     "migrate:latest": "knex --knexfile db/config.js migrate:latest",
     "migrate:rollback": "knex --knexfile db/config.js migrate:rollback",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
