--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^4.1.1",
     "form-data": "^2.1.2",
     "gmaps": "0.4.24",
+    "jscs": "^3.0.7",
     "jsonwebtoken": "^7.1.6",
     "kcors": "^1.3.0",
     "knex": "^0.11.10",
