--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "nodemon": "^1.17.3"
   },
   "repository": {
     "type": "git",
