--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "pg-native": "^1.10.1",
     "pg-promise": "^5.3.1",
     "querystring": "^0.2.0",
-    "request": "^2.75.0",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "requestretry": "^1.12.0",
     "uuid": "^2.0.3",
     "watch": "^0.19.2",
