--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "koa-views": "^4.1.0",
     "lodash": "^4.16.1",
     "lodash.once": "^4.1.1",
+    "multer": "^1.4.1",
     "node-cron": "^1.2.1",
     "node-gcm": "^0.14.4",
     "node-uuid": "1.4.3",
